# starter-tauri

./: .gitignore  .npmrc  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.gen/: component-instance.d.ts
src/: App.vue  index.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/pages/: qr-view.vue
