[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "dialog-save",
  "dialog-open",
  "protocol-asset",
  "window-set-size",
  "fs-all",
  "path-all",
  "shell-open"
] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
portpicker = "0.1"

[dependencies.tauri-plugin-localhost]
git = "https://github.com/tauri-apps/tauri-plugin-localhost"
tag = "tauri-plugin-localhost-v0.1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
